trying to fix the hero BG image not showing up issue

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 }
 /* Hero BG */
 header {
-  background-image: url(./Assets/Hero-bg.png);
+  background-image: url('/Assets/Hero-bg.png') ;
   height: 652px;
 }
 
